--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,8 @@ jobs:
         run: |
           source('data_exporter.R')
         shell: Rscript {0}
+        
+      - name: Commit Changes
+        run: |
+          git commit data.json -m 'Re-build data.json' || echo "No changes to commit"
+          git push https://${{github.actor}}:${{secrets.GH_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
