--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: auto-update-data
 on: 
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
   schedule:
   - cron: '*/1 * * * *'
 
