update to run on ubuntu-latest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   SetUpR:
-    runs-on: macos-10.15
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         r-version: [4.0.2]
