new packaged added

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages(c("tidyverse", "jsonlite"))
+          install.packages(c("tidyverse", "jsonlite","lubridate","glue"))
         shell: Rscript {0}
 
       - name: Updating data and cleaning
