--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  schedule:
-  - cron: '0 10 * * *'
+#   schedule:
+#   - cron: '0 10 * * *'
 
 jobs:
   SetUpR:
